# claude-code-recover-and-python-reset

./: .gitignore  test_imports.py
hare/: __init__.py  commands.py  context.py  cost_tracker.py  main.py  pyproject.toml  query_engine.py  setup.py  task.py  tool.py  tools.py
hare/bootstrap/: state.py
hare/cli/: __init__.py  agents_handler.py  auth_handler.py  auto_mode_handler.py  mcp_handler.py  plugins_handler.py
hare/commands_impl/: __init__.py  agent_cmd.py  branch.py  clear.py  color.py  commit.py  compact.py  config_cmd.py  context.py  copy.py  cost.py  discover.py  doctor.py  effort.py  export_cmd.py  feedback.py  files.py  help_cmd.py  hooks_cmd.py  init_cmd.py  issue.py  listen.py  login.py  logout.py  mcp.py  memory.py  model_cmd.py  output_style.py  plan_cmd.py  pr.py  rename.py  resume.py  review.py  rewind.py  search.py  session_cmd.py  skills_cmd.py  stash.py  stats.py  status.py  (+8 more)
hare/constants/: __init__.py  api_limits.py  betas.py  common.py  files.py  product.py  prompts.py  spinner_verbs.py  system.py  system_prompt_sections.py  tool_limits.py  tools.py  turn_completion_verbs.py  xml.py
hare/entrypoints/: cli.py
hare/migrations/: __init__.py
hare/query/: __init__.py
hare/services/: compact.py  diagnostic_tracking.py  notifier.py  rate_limit_messages.py  session_memory.py  token_estimation.py  tool_use_summary.py
hare/skills/: __init__.py  load_skills_dir.py
hare/tools_impl/: __init__.py
hare/types/: command.py  hooks.py  logs.py  message.py  plugin.py  session.py  tools.py
python-mvp/: README.md  pyproject.toml
(+218 files in other folders)
